--- a/src/pages/ScienceMagnetGamePage.css
+++ b/src/pages/ScienceMagnetGamePage.css
@@ -2,7 +2,7 @@
     text-align: center;
     padding: 2rem;
     font-family: 'Comic Sans MS', cursive, sans-serif;;
-    background: linear-gradient(to bottom, #f0f9ff, #ffffff);
+    background: linear-gradient(to bottom, #7bbce7, #1d4178);
     min-height: 100vh;
     position: relative;
   }
@@ -125,3 +125,36 @@
     z-index: 5;
   }
   
+
+  .result-box {
+  background: #cbdefe;
+  padding: 2rem;
+  border-radius: 30px;
+  text-align: center;
+  margin: 0px 700px;
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+  animation: fadeIn 0.5s ease-in-out;
+}
+
+.result-box h3 {
+  color: #22477f;
+  margin-bottom: 1rem;
+}
+
+
+
+.try-again-btn {
+  margin-top: 1.5rem;
+  padding: 0.8rem 2rem;
+  font-size: 1rem;
+  border: none;
+  background-color: #6c63ff;
+  color: white;
+  border-radius: 30px;
+  cursor: pointer;
+  transition: background 0.3s ease;
+}
+
+.try-again-btn:hover {
+  background-color: #594dcf;
+}
