--- a/src/pages/WordMatchExercisePage.css
+++ b/src/pages/WordMatchExercisePage.css
@@ -1,6 +1,6 @@
 .word-match-container {
     padding: 2rem;
-    background: linear-gradient(to bottom right, #fdf4ff, #e0f2fe);
+    background: linear-gradient(to bottom right, #e199f1, #e0f2fe);
     min-height: 100vh;
     text-align: center;
     font-family: 'Comic Sans MS', cursive, sans-serif;
