--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: rgb(46, 76, 158);
+  background: linear-gradient(to bottom, #2688bd, #1c5fc9);
   color: white;
   position: sticky;
   top: 0;
