--- a/src/pages/ModulePage.css
+++ b/src/pages/ModulePage.css
@@ -1,10 +1,3 @@
-/* Sayfa tamamına arka plan uygula */
-html, body {
-  margin: 0;
-  padding: 0;
-  height: 100%;
-  background-color: rgb(163, 173, 201);
-}
 
 .module-page-container {
   min-height: 100vh;
@@ -167,15 +160,15 @@ html, body {
 }
 
 .english-background {
-  background-color: rgb(220, 240, 255);
+background: linear-gradient(to bottom, #cbe9f9, #8aebf2);
 }
 
 .math-background {
-  background-color: rgb(252, 124, 149);
+background: linear-gradient(to bottom, #ffecd2, #fcb69f);
 }
 
 .science-background {
-  background-color: rgb(220, 255, 220);
+  background: linear-gradient(to bottom, #ffecd2, #91d76a);
 }
 
 .guide-header {
